--- a/style.css
+++ b/style.css
@@ -2,22 +2,23 @@ body{
     margin: auto;
     padding: 20px;
     text-align: center;
-    background-color: rgb(26, 5, 85);
+    background-color: rgb(0, 78, 92);
 }
 
 .container{
     position: absolute;
-    top: 20%;
+    top: 10%;
     background-color: rgba(32, 0, 24, 0.685);
     padding: 1.5em 10px;
     width: 300px;
     border-radius: 8px;
 }
 p{
-    font-family: 'Bangers', cursive;
+    font-family: 'Righteous', cursive ;
     color: white;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
+    word-spacing: 10px;
 }
 
 h3{
@@ -32,4 +33,12 @@ h3{
     font-family: 'Noto Serif Vithkuqi', serif;
     font-size: 50px;
     margin: 0;
+}
+
+#dice{
+    background-color: aqua;
+    box-shadow: 1px 1px 5px rgb(198, 235, 235);
+    padding: 2px;
+    margin-top: 15px;
+    cursor: pointer;
 }
