--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body{
     padding: 1.5em 10px;
     width: 300px;
     border-radius: 8px;
+    animation-name: dance;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    box-shadow: 1px 10px 10px rgb(32, 32, 32);
 }
 p{
     font-family: 'Righteous', cursive ;
@@ -41,4 +46,10 @@ h3{
     padding: 2px;
     margin-top: 15px;
     cursor: pointer;
+}
+
+@keyframes dance {
+    0%     {top: 10%}
+    50%    {top: 15%}
+    100%   {top: 10%}
 }
